--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -50,7 +50,7 @@
 <div data-role="page" id="formpage">
     <div data-role="header">
         <a href="#" data-rel="back" data-icon="back" id="backwards">Tillbaka</a>
-        <h1>Checklista: <span id="checklist-name"></span></h1>
+        <h1><span id="checklist-name"></span></h1>
     </div><!-- /header -->
     <div data-role="content">
         <!-- The Div where the form is generated
