--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -4,8 +4,9 @@
     <title>Inventeringsverktyg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
-    <SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>
-    <script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>
+    <!--<SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>-->
+    <!--<script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>-->
+    <script src="http://debug.build.phonegap.com/target/target-script-min.js#codementorjadjoubran"></script>
    
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
@@ -19,7 +20,7 @@
 
 <div data-role="page" id="list-all-checklists">
     <div data-role="header">
-        <!-- <a href="#" data-icon="" id="reload-app">Ladda om appen</a> -->
+        <a href="#" data-icon="" id="reload-app">Ladda om</a>
         <h1>VBK Inventeringsverktyg</h1>
     </div><!-- /header -->
     <div data-role="content">
@@ -35,6 +36,9 @@
         <h2>Alla checklistor:</h2>
             <ul data-role="listview" id="list-all-forms">
             </ul>
+            <br />
+            <br />
+        <a href="#" data-role="button" data-mini="true" id="reload-checklists">Uppdatera checklistor</a>
     </div>
     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
@@ -49,7 +53,7 @@
 
 <div data-role="page" id="formpage">
     <div data-role="header">
-        <a href="#" data-rel="back" data-icon="back" id="backwards">Tillbaka</a>
+        <a href="#" data-icon="back" id="backwards">Tillbaka</a>
         <h1><span id="checklist-name"></span></h1>
     </div><!-- /header -->
     <div data-role="content">
@@ -122,7 +126,7 @@ $(function() {
                 encodingType: 0,     // 0=JPG 1=PNG
                 correctOrientation: true,
                 targetWidth: 700,
-                targeHeight: 700,
+                targetHeight: 700
             };
 
             function addHiddenElement(elementId, imgData){
@@ -130,7 +134,7 @@ $(function() {
                     type: "hidden",
                     name: "imagedata" + elementId,
                     id: "imagedata" + elementId,
-                    value: "data:image/jpeg;base64," + imgData,
+                    value: "data:image/jpeg;base64," + imgData
                 }).insertAfter("#" + elementId);
 
                 $("<a>", {
@@ -155,9 +159,9 @@ $(function() {
             imageData(this.id);
         });
 
-        //check and display network connection on submitted entries page. If offline, disable submit button.
+        //check and display network connection on submitted entries page.
         setInterval(function () {
-            if (navigator.connection.type != Connection.NONE) {
+            if (navigator.connection.type !== Connection.NONE) {
                 $("#connection").html("Du &auml;r uppkopplad till internet!");
                 //$(".submitentry").removeAttr("disabled");
             } else {
@@ -168,7 +172,7 @@ $(function() {
         }, 5250);
 
         $(document).on("submit", "form", function(event){
-            var formId= $("input[name='form_id']").attr("value");
+            var formId = $("input[name='form_id']").attr("value");
             console.log(formId);
             event.preventDefault();
             event.stopPropagation();
@@ -178,8 +182,9 @@ $(function() {
             if (navigator.connection.type == Connection.NONE) {
                 alert("Du &auml;r inte uppkopplad. Checklistan kommer sparas i appen s&aring; f&aring;r du ladda upp den senare!");
                 storeSubmittedEntry(submittedEntryString, formId);
-                listSubmittedEntries();
+                //listSubmittedEntries();
             } else {
+
                 $.ajax({
                     type: 'POST',
                     url: "http://fonstertitt.appspot.com/submit",
@@ -191,38 +196,63 @@ $(function() {
 
                     })
                     .fail(function(){
-                        alert("uppladdning till servern misslyckades!");
+                        alert("Uppladdning avslutad!");
                     });
             }
             document.location.href = 'index.html';
         });
-    }
 
-    function updateChecklists(){
-        requestAllForms = $.getJSON("http://fonstertitt.appspot.com/list-all-forms");
+        function updateChecklists(){
+            if (navigator.connection.type !== Connection.NONE) {
+                var requestAllForms = $.getJSON("http://fonstertitt.appspot.com/list-all-forms");
+                requestAllForms.promise().done(function(data){
+                    localStorage.removeItem("checklists");
+                    localStorage.checklists = JSON.stringify(data);
+                    $.each(data,function(key, val){
+                        $("<li><a class='checklistObject' id='" + val.id +"'>" + val.name +"</a></li>").appendTo("#list-all-forms");
+                    });
+                    $('#list-all-forms').listview().listview('refresh');
+                });
 
-        requestAllForms.promise().done(function(data){
-            localStorage.removeItem("checklists");
-            localStorage.checklists = JSON.stringify(data);
-            $.each(data,function(key, val){
-                $("<li><a class='checklistObject' id='" + val.id +"'>" + val.name +"</a></li>").appendTo("#list-all-forms");
-            });
 
-            $('#list-all-forms').listview().listview('refresh');
-          
+            } else {
+               var data = JSON.parse(localStorage.checklists);
+                $.each(data,function(key, val){
+                    $("<li><a class='checklistObject' id='" + val.id +"'>" + val.name +"</a></li>").appendTo("#list-all-forms");
+                });
+                $('#list-all-forms').listview().listview('refresh');
+            }
+        }
+        updateChecklists();
 
+        $("#reload-checklists").click(function(){
+            $('#list-all-forms').empty();
+            updateChecklists();
         });
-
     }
+
+    $("#backwards").click(function(){
+        document.location.href = 'index.html';
+    });
+
+    $("#reload-app").click(function(){
+        document.location.href = 'index.html';
+    });
+
+
+
+
 
     function listSubmittedEntries(){
         if (localStorage.submittedEntries) {
             var entries = JSON.parse(localStorage.submittedEntries);
 
             $.each(entries, function(key, val){
-
+                $("#list-submitted-entries").empty();
                 $("<li><a  id='" + val.timestamp +"'>" + val.timestamp + "</a></li>").appendTo("#list-submitted-entries");
             });
+        } else {
+            $("<li>Du har inga sparade checklistor att ladda upp</li>").appendTo("#list-submitted-entries");
         }
         $('#list-submitted-entries ul').listview().listview('refresh');
 
@@ -230,8 +260,9 @@ $(function() {
 
     function listPreviousSubmissions(){
         if (localStorage.previousSubmissions) {
-            i = 0;
+
             $.each(JSON.parse(localStorage.previousSubmissions), function(key, val){
+                var i = 0;
                 if (i == 5) {
                     return false;
                 }
@@ -249,8 +280,6 @@ $(function() {
     }
 
     listSubmittedEntries();
-
-    updateChecklists();
 
     listPreviousSubmissions();
 
