--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
     <!--<SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>-->
     <!--<script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>-->
+    <script src="http://debug.build.phonegap.com/target/target-script-min.js#codementorjadjoubran"></script>
    
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
@@ -125,7 +126,7 @@ $(function() {
                 encodingType: 0,     // 0=JPG 1=PNG
                 correctOrientation: true,
                 targetWidth: 700,
-                targeHeight: 700,
+                targetHeight: 700
             };
 
             function addHiddenElement(elementId, imgData){
@@ -133,7 +134,7 @@ $(function() {
                     type: "hidden",
                     name: "imagedata" + elementId,
                     id: "imagedata" + elementId,
-                    value: "data:image/jpeg;base64," + imgData,
+                    value: "data:image/jpeg;base64," + imgData
                 }).insertAfter("#" + elementId);
 
                 $("<a>", {
@@ -158,9 +159,9 @@ $(function() {
             imageData(this.id);
         });
 
-        //check and display network connection on submitted entries page. If offline, disable submit button.
+        //check and display network connection on submitted entries page.
         setInterval(function () {
-            if (navigator.connection.type != Connection.NONE) {
+            if (navigator.connection.type !== Connection.NONE) {
                 $("#connection").html("Du &auml;r uppkopplad till internet!");
                 //$(".submitentry").removeAttr("disabled");
             } else {
@@ -171,7 +172,7 @@ $(function() {
         }, 5250);
 
         $(document).on("submit", "form", function(event){
-            var formId= $("input[name='form_id']").attr("value");
+            var formId = $("input[name='form_id']").attr("value");
             console.log(formId);
             event.preventDefault();
             event.stopPropagation();
@@ -181,8 +182,9 @@ $(function() {
             if (navigator.connection.type == Connection.NONE) {
                 alert("Du &auml;r inte uppkopplad. Checklistan kommer sparas i appen s&aring; f&aring;r du ladda upp den senare!");
                 storeSubmittedEntry(submittedEntryString, formId);
-                listSubmittedEntries();
+                //listSubmittedEntries();
             } else {
+
                 $.ajax({
                     type: 'POST',
                     url: "http://fonstertitt.appspot.com/submit",
@@ -201,19 +203,25 @@ $(function() {
         });
 
         function updateChecklists(){
-            if (navigator.connection.type != Connection.NONE) {
-                requestAllForms = $.getJSON("http://fonstertitt.appspot.com/list-all-forms");
+            if (navigator.connection.type !== Connection.NONE) {
+                var requestAllForms = $.getJSON("http://fonstertitt.appspot.com/list-all-forms");
+                requestAllForms.promise().done(function(data){
+                    localStorage.removeItem("checklists");
+                    localStorage.checklists = JSON.stringify(data);
+                    $.each(data,function(key, val){
+                        $("<li><a class='checklistObject' id='" + val.id +"'>" + val.name +"</a></li>").appendTo("#list-all-forms");
+                    });
+                    $('#list-all-forms').listview().listview('refresh');
+                });
+
+
             } else {
-                requestAllForms = JSON.parse(localStorage.checklists);
-            }
-            requestAllForms.promise().done(function(data){
-                localStorage.removeItem("checklists");
-                localStorage.checklists = JSON.stringify(data);
+               var data = JSON.parse(localStorage.checklists);
                 $.each(data,function(key, val){
                     $("<li><a class='checklistObject' id='" + val.id +"'>" + val.name +"</a></li>").appendTo("#list-all-forms");
                 });
                 $('#list-all-forms').listview().listview('refresh');
-            });
+            }
         }
         updateChecklists();
 
@@ -244,7 +252,7 @@ $(function() {
                 $("<li><a  id='" + val.timestamp +"'>" + val.timestamp + "</a></li>").appendTo("#list-submitted-entries");
             });
         } else {
-            $("<li>Du har inga sparade checklistor att ladda upp</li>").appendTo("#list-submitted-entries")
+            $("<li>Du har inga sparade checklistor att ladda upp</li>").appendTo("#list-submitted-entries");
         }
         $('#list-submitted-entries ul').listview().listview('refresh');
 
@@ -252,8 +260,9 @@ $(function() {
 
     function listPreviousSubmissions(){
         if (localStorage.previousSubmissions) {
-            i = 0;
+
             $.each(JSON.parse(localStorage.previousSubmissions), function(key, val){
+                var i = 0;
                 if (i == 5) {
                     return false;
                 }
