changed reload app location

--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
 
 <div data-role="page" id="list-all-checklists">
     <div data-role="header">
-        <a href="#" data-icon="" id="reload-app">Ladda om</a>
         <h1>VBK Inventeringsverktyg</h1>
     </div><!-- /header -->
     <div data-role="content">
+        <a href="#" data-role="button" data-mini="true" id="reload-app">Ladda om appen</a>
 
         <div>
             <h2>Anv&auml;nd nyligen sparad checklista:</h2>
