--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -23,7 +23,7 @@
         <h1>VBK Inventeringsverktyg</h1>
     </div><!-- /header -->
     <div data-role="content">
-        <a href="#" data-role="button" data-mini="true" id="reload-app">Ladda om appen</a>
+        
 
         <div>
             <h2>Anv&auml;nd nyligen sparad checklista:</h2>
@@ -35,7 +35,12 @@
             </ul>
             <br />
             <br />
-        <a href="#" data-role="button" data-mini="true" id="reload-checklists">Uppdatera checklistor</a>
+        <div data-role="controlgroup">
+            <a href="#" data-role="button" data-mini="true" id="reload-app">Ladda om appen</a>
+            <a href="#" data-role="button" data-mini="true" id="reload-checklists">Uppdatera checklistor</a>
+            <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
+        </div>
+
     </div>
     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
