--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
     <!--<SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>-->
     <!--<script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>-->
-    <script src="http://debug.build.phonegap.com/target/target-script-min.js#codementorjadjoubran"></script>
+    <!--<script src="http://debug.build.phonegap.com/target/target-script-min.js#codementorjadjoubran"></script>-->
    
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-   
     <script src="js/dform.js"></script>
     <script src="js/pretty.js" type="text/javascript"></script>
 </head>
