upload is fuckin working

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -40,6 +40,8 @@
             <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
+        <button id="upload-submitted-entries2">Ladda upp sparade formul&auml;r</button>
+
     </div>
     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
