--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,14 @@
             <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
+        <div id="array-length"></div>
+        <div id="connection"></div><br>
+         
+         <br /><br />
+        <ul data-role="listview" id="list-submitted-entries">
+        </ul>
+
+
     </div>
     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
@@ -81,12 +89,12 @@
     </div><!-- /header -->
     <div data-role="content"><br>
        
-        <div id="connection"></div><br>
+<!--         <div id="connection"></div><br>
          <button id="upload-submitted-entries">Ladda upp sparade formul&auml;r</button>
          <br /><br />
         <ul data-role="listview" id="list-submitted-entries">
         </ul>
-
+ -->
     </div>
 
     <div data-role="footer" data-id="foo1" data-position="fixed">
