tested all functionality on android. everything works. minor UI changes. submitted entries disappearance

--- a/www/index.html
+++ b/www/index.html
@@ -35,28 +35,28 @@
             <br />
             <br />
         <div data-role="controlgroup">
-            <a href="#" data-role="button" data-mini="true" id="reload-app">Ladda om appen</a>
-            <a href="#" data-role="button" data-mini="true" id="reload-checklists">Uppdatera checklistor</a>
-            <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
+            <a href="#" data-role="button" id="reload-app">Ladda om appen och checklistor</a>
+            <!-- <a href="#" data-role="button" id="reload-checklists">Uppdatera checklistor</a> -->
+            <a href="#" data-role="button" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
-        <div id="array-length"></div>
+        <span id="entries-array-length"></span>
         <div id="connection"></div><br>
-         
+         <button id="upload-submitted-entries" data-theme="b">Ladda upp sparade formul&auml;r</button>
          <br /><br />
         <ul data-role="listview" id="list-submitted-entries">
         </ul>
 
 
     </div>
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 
 </div><!-- end page -->
 
@@ -72,14 +72,14 @@
         <br />
         <br />
     </div>
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 
 </div><!-- end page -->
 
@@ -97,14 +97,14 @@
  -->
     </div>
 
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 </div>
 
 <script type="text/javascript" src="js/app.js"></script>
