--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -40,17 +40,23 @@
             <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
-        <button id="upload-submitted-entries2">Ladda upp sparade formul&auml;r</button>
+        Du har <span id="entries-array-length"></span> sparade formul&auml;r att ladda upp!
+        <div id="connection"></div><br>
+         <button id="upload-submitted-entries">Ladda upp sparade formul&auml;r</button>
+         <br /><br />
+        <ul data-role="listview" id="list-submitted-entries">
+        </ul>
+
 
     </div>
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 
 </div><!-- end page -->
 
@@ -66,14 +72,14 @@
         <br />
         <br />
     </div>
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 
 </div><!-- end page -->
 
@@ -83,22 +89,22 @@
     </div><!-- /header -->
     <div data-role="content"><br>
        
-        <div id="connection"></div><br>
+<!--         <div id="connection"></div><br>
          <button id="upload-submitted-entries">Ladda upp sparade formul&auml;r</button>
          <br /><br />
         <ul data-role="listview" id="list-submitted-entries">
         </ul>
-
+ -->
     </div>
 
-    <div data-role="footer" data-id="foo1" data-position="fixed">
+<!--     <div data-role="footer" data-id="foo1" data-position="fixed">
         <div data-role="navbar">
             <ul>
                 <li><a href="#list-all-checklists">Checklistor</a></li>
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </div><!-- /footer --> -->
 </div>
 
 <script type="text/javascript" src="js/app.js"></script>
