--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Inventeringsverktyg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
     <!--<SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>-->
     <!--<script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>-->
