--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Inventeringsverktyg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
     <!--<SCRIPT TYPE="text/javascript" src="js/debuggap.js"></SCRIPT>-->
     <!--<script src="http://10.0.0.5:8080/target/target-script-min.js#anonymous"></script>-->
@@ -35,14 +36,14 @@
             <br />
             <br />
         <div data-role="controlgroup">
-            <a href="#" data-role="button" data-mini="true" id="reload-app">Ladda om appen</a>
-            <a href="#" data-role="button" data-mini="true" id="reload-checklists">Uppdatera checklistor</a>
-            <a href="#" data-role="button" data-mini="true" id="remove-previous-submissions">Ta bort nyligen sparade</a>
+            <a href="#" data-role="button" id="reload-app">Ladda om appen och checklistor</a>
+            <!-- <a href="#" data-role="button" id="reload-checklists">Uppdatera checklistor</a> -->
+            <a href="#" data-role="button" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
-        Du har <span id="entries-array-length"></span> sparade formul&auml;r att ladda upp!
+        <span id="entries-array-length"></span>
         <div id="connection"></div><br>
-         <button id="upload-submitted-entries">Ladda upp sparade formul&auml;r</button>
+         <button id="upload-submitted-entries" data-theme="b">Ladda upp sparade formul&auml;r</button>
          <br /><br />
         <ul data-role="listview" id="list-submitted-entries">
         </ul>
