--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/jquery.mobile-1.3.2.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-    <script src="js/dform.js"></script>
-    <script src="js/pretty.js" type="text/javascript"></script>
+    <script src="js/dform.min.js"></script>
+    <!--<script src="js/pretty.js" type="text/javascript"></script>-->
 </head>
 
 <body id="content-body">
@@ -36,8 +36,8 @@
             <br />
             <br />
         <div data-role="controlgroup">
-            <a href="#" data-role="button" id="reload-app">Ladda om appen och checklistor</a>
-            <!-- <a href="#" data-role="button" id="reload-checklists">Uppdatera checklistor</a> -->
+            <a href="#" data-role="button" id="reload-app">Ladda om appen</a>
+            <a href="#" data-role="button" id="reload-checklists">Uppdatera checklistor</a>
             <a href="#" data-role="button" id="remove-previous-submissions">Ta bort nyligen sparade</a>
         </div>
 
@@ -57,7 +57,7 @@
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer --> -->
+    </div><!-- /footer -->
 
 </div><!-- end page -->
 
@@ -80,7 +80,7 @@
                 <li><a href="#submissions-page">Sparade formul&auml;r</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer --> -->
+    </div><!-- /footer -->
 
 </div><!-- end page -->
 
